@@ -1,12 +1,21 @@
 package org.apache.solr.core;
 
+import java.lang.invoke.MethodHandles;
+import java.util.Arrays;
+import java.util.Locale;
+
 import org.apache.lucene.codecs.Codec;
 import org.apache.lucene.codecs.DocValuesFormat;
 import org.apache.lucene.codecs.PostingsFormat;
 import org.apache.lucene.codecs.lucene54.Lucene54Codec;
+import org.apache.lucene.codecs.lucene50.Lucene50StoredFieldsFormat.Mode;
+import org.apache.solr.common.SolrException;
+import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.schema.SchemaField;
 import org.apache.solr.util.plugin.SolrCoreAware;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
@@ -29,11 +38,27 @@ import org.apache.solr.util.plugin.SolrCoreAware;
  * Per-field CodecFactory implementation, extends Lucene's 
  * and returns postings format implementations according to the 
  * schema configuration.
+ * <br>
+ * Also, a string argument with name <code>compressionMode</code> can be
+ * provided to chose between the different compression options for
+ * stored fields
+ * 
  * @lucene.experimental
  */
 public class SchemaCodecFactory extends CodecFactory implements SolrCoreAware {
+  
+  /**
+   * Key to use in init arguments to set the compression mode in the codec.
+   */
+  public static final String COMPRESSION_MODE = "compressionMode";
+  
+  public static final Mode SOLR_DEFAULT_COMPRESSION_MODE = Mode.BEST_SPEED;
+  
+  private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+  
   private Codec codec;
   private volatile SolrCore core;
+  
   
   // TODO: we need to change how solr does this?
   // rather than a string like "Direct" you need to be able to pass parameters
@@ -51,7 +76,23 @@ public class SchemaCodecFactory extends CodecFactory implements SolrCoreAware {
   @Override
   public void init(NamedList args) {
     super.init(args);
-    codec = new Lucene54Codec() {
+    assert codec == null;
+    String compressionModeStr = (String)args.get(COMPRESSION_MODE);
+    Mode compressionMode;
+    if (compressionModeStr != null) {
+      try {
+        compressionMode = Mode.valueOf(compressionModeStr.toUpperCase(Locale.ROOT));
+      } catch (IllegalArgumentException e) {
+        throw new SolrException(ErrorCode.SERVER_ERROR, 
+            "Invalid compressionMode: '" + compressionModeStr + 
+            "'. Value must be one of " + Arrays.toString(Mode.values()));
+      }
+      log.info("Using compressionMode: " + compressionMode);
+    } else {
+      compressionMode = SOLR_DEFAULT_COMPRESSION_MODE;
+      log.info("Using default compressionMode: " + compressionMode);
+    }
+    codec = new Lucene54Codec(compressionMode) {
       @Override
       public PostingsFormat getPostingsFormatForField(String field) {
         final SchemaField schemaField = core.getLatestSchema().getFieldOrNull(field);
