@@ -21,7 +21,6 @@
   <xi:include href="solrconfig.snippet.randomindexconfig.xml" xmlns:xi="http://www.w3.org/2001/XInclude"/>
   <directoryFactory name="DirectoryFactory" class="${solr.directoryFactory:solr.RAMDirectoryFactory}"/>
   <requestHandler name="standard" class="solr.StandardRequestHandler"></requestHandler>
-  <codecFactory class="solr.SchemaCodecFactory">
-    <str name="compressionMode">${tests.COMPRESSION_MODE:BEST_COMPRESSION}</str>
-  </codecFactory>
+  <schemaFactory class="ClassicIndexSchemaFactory"/>
+  <codecFactory class="solr.SchemaCodecFactory"/>
 </config>
